@@ -16,7 +16,7 @@
   * License along with this library; if not, write to the Free Software
   * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
   *
-  * File: $Id: mbproto.h,v 1.11 2006/09/23 14:13:07 wolti Exp $
+  * File: $Id: mbproto.h,v 1.12 2006/11/03 16:53:36 wolti Exp $
   */
 
 #ifndef _MB_PROTO_H
@@ -29,24 +29,24 @@ PR_BEGIN_EXTERN_C
 #define MB_ADDRESS_BROADCAST    ( 0 )   /*! Modbus broadcast address. */
 #define MB_ADDRESS_MIN          ( 1 )   /*! Smallest possible slave address. */
 #define MB_ADDRESS_MAX          ( 247 ) /*! Biggest possible slave address. */
-#define MB_FUNC_NONE                        (  0 )
-#define MB_FUNC_READ_COILS                  (  1 )
-#define MB_FUNC_READ_DISCRETE_INPUTS        (  2 )
-#define MB_FUNC_WRITE_SINGLE_COIL           (  5 )
-#define MB_FUNC_WRITE_MULTIPLE_COILS        ( 15 )
-#define MB_FUNC_READ_HOLDING_REGISTER       (  3 )
-#define MB_FUNC_READ_INPUT_REGISTER         (  4 )
-#define MB_FUNC_WRITE_REGISTER              (  6 )
-#define MB_FUNC_WRITE_MULTIPLE_REGISTERS    ( 16 )
-#define MB_FUNC_DIAG_READ_EXCEPTION         (  7 )
-#define MB_FUNC_DIAG_DIAGNOSTIC             (  8 )
-#define MB_FUNC_DIAG_GET_COM_EVENT_CNT      ( 11 )
-#define MB_FUNC_DIAG_GET_COM_EVENT_LOG      ( 12 )
-#define MB_FUNC_OTHER_REPORT_SLAVEID        ( 17 )
-#define MB_FUNC_ERROR                       ( 128 )
-
+#define MB_FUNC_NONE                          (  0 )
+#define MB_FUNC_READ_COILS                    (  1 )
+#define MB_FUNC_READ_DISCRETE_INPUTS          (  2 )
+#define MB_FUNC_WRITE_SINGLE_COIL             (  5 )
+#define MB_FUNC_WRITE_MULTIPLE_COILS          ( 15 )
+#define MB_FUNC_READ_HOLDING_REGISTER         (  3 )
+#define MB_FUNC_READ_INPUT_REGISTER           (  4 )
+#define MB_FUNC_WRITE_REGISTER                (  6 )
+#define MB_FUNC_WRITE_MULTIPLE_REGISTERS      ( 16 )
+#define MB_FUNC_READWRITE_MULTIPLE_REGISTERS  ( 23 )
+#define MB_FUNC_DIAG_READ_EXCEPTION           (  7 )
+#define MB_FUNC_DIAG_DIAGNOSTIC               (  8 )
+#define MB_FUNC_DIAG_GET_COM_EVENT_CNT        ( 11 )
+#define MB_FUNC_DIAG_GET_COM_EVENT_LOG        ( 12 )
+#define MB_FUNC_OTHER_REPORT_SLAVEID          ( 17 )
+#define MB_FUNC_ERROR                         ( 128 )
 /* ----------------------- Type definitions ---------------------------------*/
-typedef enum
+    typedef enum
 {
     MB_EX_NONE = 0x00,
     MB_EX_ILLEGAL_FUNCTION = 0x01,
@@ -60,8 +60,7 @@ typedef enum
     MB_EX_GATEWAY_TGT_FAILED = 0x0B,
 } eMBException;
 
-typedef         eMBException( *pxMBFunctionHandler ) ( UCHAR *pucFrame,
-                                                       USHORT *pusLength );
+typedef         eMBException( *pxMBFunctionHandler ) ( UCHAR * pucFrame, USHORT * pusLength );
 
 typedef struct
 {
