@@ -16,7 +16,7 @@
   * License along with this library; if not, write to the Free Software
   * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
   *
-  * File: $Id: mb.c,v 1.20 2006/10/30 08:11:51 wolti Exp $
+  * File: $Id: mb.c,v 1.21 2006/11/03 16:53:13 wolti Exp $
   */
 
 /* ----------------------- System includes ----------------------------------*/
@@ -98,6 +98,9 @@ static xMBFunctionHandler xFuncHandlers[MB_FUNC_HANDLERS_MAX] = {
 #endif
 #if MB_FUNC_READ_HOLDING_ENABLED > 0
     {MB_FUNC_WRITE_REGISTER, eMBFuncWriteHoldingRegister},
+#endif
+#if MB_FUNC_READWRITE_MULTIPLE_REGISTERS > 0
+    {MB_FUNC_READWRITE_MULTIPLE_REGISTERS, eMBFuncReadWriteMultipleHoldingRegister},
 #endif
 #if MB_FUNC_READ_COILS_ENABLED > 0
     {MB_FUNC_READ_COILS, eMBFuncReadCoils},
@@ -294,23 +297,23 @@ eMBEnable( void )
 eMBErrorCode
 eMBDisable( void )
 {
-  eMBErrorCode    eStatus;
+    eMBErrorCode    eStatus;
 
-  if( eMBState == STATE_ENABLED )
-  {
-    pvMBFrameStopCur(  );
-    eMBState = STATE_DISABLED;
-    eStatus = MB_ENOERR;
-  }
-  else if( eMBState == STATE_DISABLED )
-  {
-    eStatus = MB_ENOERR;
-  }
-  else
-  {
-    eStatus = MB_EILLSTATE;
-  }
-  return eStatus;
+    if( eMBState == STATE_ENABLED )
+    {
+        pvMBFrameStopCur(  );
+        eMBState = STATE_DISABLED;
+        eStatus = MB_ENOERR;
+    }
+    else if( eMBState == STATE_DISABLED )
+    {
+        eStatus = MB_ENOERR;
+    }
+    else
+    {
+        eStatus = MB_EILLSTATE;
+    }
+    return eStatus;
 }
 
 eMBErrorCode
