@@ -1,5 +1,13 @@
 
 2006-10-30 (REL_1_0_6) Christian Walter <wolti@sil.at>:
+ Notes: Added support for Read/Write Multiple Registers function
+   (0x17)
+
+ Detailed notes:
+   - FEATURE (ALL): Added support for Read/Write Multiple Registers
+      function (0x17). The implementation simply makes two callbacks
+      to the eMBRegHoldingCB function where frist the values are
+      written and then the other register values are read.
 
 2006-10-30 (REL_1_0_5) Christian Walter <wolti@sil.at>:
  Notes: eMBDisable and eMBClose can now be called multiple times 
